[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/characters/roguelikeChar_transparent.png" type="Texture" id=1]
[ext_resource path="res://assets/items/weapon_machine.png" type="Texture" id=2]
[ext_resource path="res://assets/custom/dotted_line.png" type="Texture" id=3]
[ext_resource path="res://player/player.gd" type="Script" id=4]
[ext_resource path="res://player/claw.gd" type="Script" id=5]
[ext_resource path="res://assets/bomb/3-Explotion/7.png" type="Texture" id=6]
[ext_resource path="res://assets/bomb/3-Explotion/2.png" type="Texture" id=7]
[ext_resource path="res://assets/bomb/3-Explotion/6.png" type="Texture" id=8]
[ext_resource path="res://assets/bomb/3-Explotion/8.png" type="Texture" id=9]
[ext_resource path="res://assets/bomb/3-Explotion/9.png" type="Texture" id=10]
[ext_resource path="res://assets/bomb/3-Explotion/1.png" type="Texture" id=11]
[ext_resource path="res://assets/bomb/3-Explotion/3.png" type="Texture" id=12]
[ext_resource path="res://assets/bomb/3-Explotion/4.png" type="Texture" id=13]
[ext_resource path="res://assets/bomb/3-Explotion/5.png" type="Texture" id=14]
[ext_resource path="res://assets/sfx/shoot.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/explosion.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/pickup.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/hit.wav" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 21 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), null ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[node name="Player" type="Area2D"]
position = Vector2( 639, 91 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 17, 172, 16, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Remote" type="Sprite" parent="."]
visible = false
position = Vector2( -19, 24 )
rotation = 1.5708
scale = Vector2( 0.5, 1 )
texture = ExtResource( 2 )
offset = Vector2( -16, 0 )

[node name="Line" type="Sprite" parent="."]
position = Vector2( -19, 24 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
offset = Vector2( 0, 12 )
region_enabled = true
region_rect = Rect2( 0, 0, 1, 0 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )

[node name="Claw" type="Area2D" parent="."]
visible = false
position = Vector2( -19, 24 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Claw"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( 0, 6 )
region_enabled = true
region_rect = Rect2( 446, 86, 10, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Claw"]
position = Vector2( -1, 9 )
shape = SubResource( 3 )

[node name="HitSFX" type="AudioStreamPlayer" parent="Claw"]
stream = ExtResource( 18 )

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="PickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="area_entered" from="Claw" to="Claw" method="_on_area_entered"]
[connection signal="returned" from="Claw" to="." method="_on_Claw_returned"]
